# _example/hertz-blog-service/gen/openapi.yaml
@@ -7,43 +7,6 @@ info:
     description: blog service is a blog demo
     version: 0.0.1
 paths:
-    /v1/articles:
-        get:
-            tags:
-                - BlogService
-            operationId: BlogService_GetArticles
-            parameters:
-                - name: page
-                  in: query
-                  description: '@gotags: query:"page" default:"1" vd:"$>=1"'
-                  schema:
-                    type: integer
-                    format: int32
-                - name: pageSize
-                  in: query
-                  description: '@gotags: query:"page_size" default:"1" vd:"$>=1"'
-                  schema:
-                    type: integer
-                    format: int32
-                - name: authorId
-                  in: query
-                  description: '@gotags: path:"author_id,required" vd:"$>1"'
-                  schema:
-                    type: integer
-                    format: int32
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/GetArticlesResponse'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
     /v1/author/{authorId}/articles:
         get:
             tags:
@@ -52,7 +15,7 @@ paths:
             parameters:
                 - name: authorId
                   in: path
-                  description: '@gotags: path:"author_id,required" vd:"$>1"'
+                  description: '@gotags: query:"author_id" path:"author_id" vd:"$>1"'
                   required: true
                   schema:
                     type: integer
